# x402-autogpt-plugin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_simple.py
.github/workflows/: ci.yml
examples/: autogpt_workflow.md  standalone_usage.py
src/x402_bazaar/: __init__.py  x402_client.py
tests/: __init__.py  test_client.py  test_plugin_init.py  test_standalone_usage.py  test_x402_client_unit.py
